==> apache/nuttx/arch/arm/src/rp2040/rp2040_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <assert.h>
#include <nuttx/arch.h>
#include <nuttx/i2c/i2c_master.h>
#include <nuttx/irq.h>
#include <arch/board/board.h>
#include "chip.h"
#include "arm_arch.h"
#include "arm_internal.h"
#include "rp2040_i2c.h"
#include "hardware/rp2040_i2c.h"
#include "hardware/rp2040_resets.h"
#include "rp2040_gpio.h"
#define I2C_TIMEOUT  (20*1000/CONFIG_USEC_PER_TICK) /* 20 mS */
#define I2C_DEFAULT_FREQUENCY 400000
#define I2C_FIFO_MAX_SIZE	    32
#define I2C_INTR_ENABLE ((RP2040_I2C_IC_INTR_STAT_R_STOP_DET) | \
                         (RP2040_I2C_IC_INTR_STAT_R_TX_ABRT)  | \
                         (RP2040_I2C_IC_INTR_STAT_R_TX_OVER)  | \
                         (RP2040_I2C_IC_INTR_STAT_R_RX_OVER)  | \
                         (RP2040_I2C_IC_INTR_STAT_R_RX_UNDER))

static void rp2040_i2c_setfrequency(struct rp2040_i2cdev_s *priv,
                                   uint32_t frequency)
{
  int32_t lcnt;
  int32_t hcnt;
  uint64_t lcnt64;
  uint64_t hcnt64;
  uint64_t speed;
  uint64_t t_low;
  uint64_t t_high;
  uint32_t base = BOARD_PERI_FREQ;
  uint32_t spklen;

  ASSERT(base);

  if ((priv->frequency == frequency) && (priv->base_freq == base))
    {
      return;
    }

  priv->frequency = frequency;
  priv->base_freq = base;

  base /= 1000;

  if (frequency <= 100000)
    {
      t_low  = 4700000;
      t_high = 4000000;
    }
  else if (frequency <= 400000)
    {
      t_low  = 1300000;
      t_high = 600000;
    }
  else
    {
      t_low  = 500000;
      t_high = 260000;
    }

  if (frequency > 100000)
    {
      if (base < 20032)
        {
          spklen = 1;
        }
      else if (base < 40064)
        {
          spklen = 2;
        }
      else
        {
          spklen = 3;
        }
    }
  else
    {
      spklen = 1;
    }

  lcnt64 = (t_low + 6500ull / 20000ull) * base;
  lcnt   = ((lcnt64 + 999999999ull) / 1000000000ull) - 1; /* ceil */
  lcnt   = lcnt < 8 ? 8 : lcnt;

  hcnt64 = (t_high - 6500ull) * base;
  hcnt   = ((hcnt64 + 999999999ull) / 1000000000ull) - 6 - spklen; /* ceil */
  hcnt   = hcnt < 6 ? 6 : hcnt;

  speed =
    1000000000000000000ull /
    (((lcnt + 1) * 1000000000000ull +
    (hcnt + 6 + spklen) * 1000000000000ull) / base +
     20000ull / 1000ull * 1000000ull);

  if (speed > (frequency * 1000ull))
    {
      uint64_t adj;
      adj = ((1000000000000000000ull / (frequency * 1000ull)) -
             (1000000000000000000ull / speed)) *
            base;
      hcnt += (adj + 999999999999ull) / 1000000000000ull;
    }

  /* use FS register in SS and FS mode */

  i2c_reg_write(priv, RP2040_I2C_IC_FS_SCL_HCNT_OFFSET, hcnt);
  i2c_reg_write(priv, RP2040_I2C_IC_FS_SCL_LCNT_OFFSET, lcnt);
  i2c_reg_rmw(priv, RP2040_I2C_IC_CON_OFFSET,
                    RP2040_I2C_IC_CON_SPEED_FAST,
                    RP2040_I2C_IC_CON_SPEED_MASK);

  i2c_reg_write(priv, RP2040_I2C_IC_FS_SPKLEN_OFFSET, spklen);
}

static void rp2040_i2c_timeout(wdparm_t arg)
{
  struct rp2040_i2cdev_s *priv = (struct rp2040_i2cdev_s *)arg;
  irqstate_t flags             = enter_critical_section();

  priv->error = -ENODEV;
  i2c_givesem(&priv->wait);
  leave_critical_section(flags);
}

static int rp2040_i2c_interrupt(int irq, FAR void *context, FAR void *arg)
{
  FAR struct rp2040_i2cdev_s *priv = (FAR struct rp2040_i2cdev_s *)arg;
  uint32_t state;
  int ret;

  state = i2c_reg_read(priv, RP2040_I2C_IC_INTR_STAT_OFFSET);

  if (state & RP2040_I2C_IC_INTR_STAT_R_TX_ABRT)
    {
      i2c_reg_read(priv, RP2040_I2C_IC_CLR_TX_ABRT_OFFSET);
      priv->error = -ENODEV;
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_TX_OVER)
    {
      i2c_reg_read(priv, RP2040_I2C_IC_CLR_TX_OVER_OFFSET);
      priv->error = -EIO;
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_RX_OVER)
    {
      i2c_reg_read(priv, RP2040_I2C_IC_CLR_RX_OVER_OFFSET);
      priv->error = -EIO;
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_RX_UNDER)
    {
      i2c_reg_read(priv, RP2040_I2C_IC_CLR_RX_UNDER_OFFSET);
      priv->error = -EIO;
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_TX_EMPTY)
    {
      /* TX_EMPTY is automatically cleared by hardware
       * when the buffer level goes above the threshold.
       */

      i2c_reg_rmw(priv, RP2040_I2C_IC_INTR_MASK_OFFSET,
                  0, RP2040_I2C_IC_INTR_MASK_M_TX_EMPTY);
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_RX_FULL)
    {
      /* RX_FULL is automatically cleared by hardware
       * when the buffer level goes below the threshold.
       */

      i2c_reg_rmw(priv, RP2040_I2C_IC_INTR_MASK_OFFSET,
                  0, RP2040_I2C_IC_INTR_MASK_M_RX_FULL);
      rp2040_i2c_drainrxfifo(priv);
    }

  if (state & RP2040_I2C_IC_INTR_STAT_R_STOP_DET)
    {
      i2c_reg_read(priv, RP2040_I2C_IC_CLR_STOP_DET_OFFSET);
    }

  if ((priv->error) || (state & RP2040_I2C_IC_INTR_STAT_R_TX_EMPTY) ||
                       (state & RP2040_I2C_IC_INTR_STAT_R_RX_FULL))
    {
      /* Failure of wd_cancel() means that the timer expired.
       * In this case, nxsem_post() has already been called.
       * Therefore, call nxsem_post() only when wd_cancel() succeeds.
       */

      ret = wd_cancel(&priv->timeout);
      if (ret == OK)
        {
          i2c_givesem(&priv->wait);
        }
    }

  return OK;
}

static int rp2040_i2c_transfer(FAR struct i2c_master_s *dev,
                              FAR struct i2c_msg_s *msgs, int count)
{
  struct rp2040_i2cdev_s *priv = (struct rp2040_i2cdev_s *)dev;
  int i;
  int ret    = 0;
  int semval = 0;
  int addr = -1;
  static int wostop = 0;

  DEBUGASSERT(dev != NULL);

  /* Get exclusive access to the I2C bus */

  i2c_takesem(&priv->mutex);

  /* Check wait semaphore value. If the value is not 0, the transfer can not
   * be performed normally.
   */

  ret = nxsem_get_value(&priv->wait, &semval);
  DEBUGASSERT(ret == OK && semval == 0);

  for (i = 0; i < count; i++, msgs++)
    {
      /* Pass msg descriptor via device context */

      priv->msgs  = msgs;
      priv->error = OK;

      if ((addr != msgs->addr) && !wostop)
        {
          rp2040_i2c_disable(priv);

          rp2040_i2c_setfrequency(priv, msgs->frequency);

          i2c_reg_rmw(priv, RP2040_I2C_IC_CON_OFFSET,
                      RP2040_I2C_IC_CON_IC_RESTART_EN,
                      RP2040_I2C_IC_CON_IC_RESTART_EN);
          i2c_reg_write(priv, RP2040_I2C_IC_TAR_OFFSET, msgs->addr & 0x7f);

          rp2040_i2c_enable(priv);
          addr = msgs->addr;
        }

      if (msgs->flags & I2C_M_NOSTOP)
        {
          /* Don't send stop condition even if the last data */

          wostop = 1;
        }
      else
        {
          wostop = 0;
        }

      if (msgs->flags & I2C_M_READ)
        {
          ret = rp2040_i2c_receive(priv, (wostop) ? 0 : (i + 1 == count));
        }
      else
        {
          ret = rp2040_i2c_send(priv, (wostop) ? 0 : (i + 1 == count));
        }

      if (ret < 0)
        {
          break;
        }

      if (priv->error != OK)
        {
          ret = priv->error;
          break;
        }

      /* Clear msg descriptor for prevent illegal access in interrupt */

      priv->msgs = NULL;
    }

  if (!wostop)
    {
      rp2040_i2c_disable(priv);
    }

  i2c_givesem(&priv->mutex);

  return ret;
}

struct i2c_master_s *rp2040_i2cbus_initialize(int port)
{
  struct rp2040_i2cdev_s *priv;

  irqstate_t flags;

  flags = enter_critical_section();

#ifdef CONFIG_RP2040_I2C0
  if (port == 0)
    {
      priv        = &g_i2c0dev;
      priv->dev.ops = &rp2040_i2c_ops;
    }
  else
#endif
#ifdef CONFIG_RP2040_I2C1
  if (port == 1)
    {
      priv        = &g_i2c1dev;
      priv->dev.ops = &rp2040_i2c_ops;
    }
  else
#endif
    {
      leave_critical_section(flags);
      i2cerr("I2C Only support 0,1\n");
      return NULL;
    }

  priv->refs++;

  /* Test if already initialized or not */

  if (1 < priv->refs)
    {
      leave_critical_section(flags);
      return &priv->dev;
    }

  priv->port      = port;
  priv->frequency = 0;

  priv->base_freq = BOARD_PERI_FREQ;

  rp2040_i2c_disable(priv);
  rp2040_i2c_init(priv);
  rp2040_i2c_setfrequency(priv, I2C_DEFAULT_FREQUENCY);

  leave_critical_section(flags);

  nxsem_init(&priv->mutex, 0, 1);
  nxsem_init(&priv->wait, 0, 0);
  nxsem_set_protocol(&priv->wait, SEM_PRIO_NONE);

  /* Attach Interrupt Handler */

  irq_attach(priv->irqid, rp2040_i2c_interrupt, priv);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->irqid);

  return &priv->dev;
}

int rp2040_i2cbus_uninitialize(FAR struct i2c_master_s *dev)
{
  struct rp2040_i2cdev_s *priv = (struct rp2040_i2cdev_s *)dev;

  /* Decrement reference count and check for underflow */

  if (priv->refs == 0)
    {
      return ERROR;
    }

  if (--priv->refs)
    {
      return OK;
    }

  rp2040_i2c_disable(priv);

  up_disable_irq(priv->irqid);
  irq_detach(priv->irqid);

  wd_cancel(&priv->timeout);
  nxsem_destroy(&priv->mutex);
  nxsem_destroy(&priv->wait);

  return OK;
}
