==> apache/nuttx/arch/arm/src/lpc31xx/lpc31_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/wdog.h>
#include <nuttx/semaphore.h>
#include <nuttx/i2c/i2c_master.h>
#include <nuttx/irq.h>
#include <arch/board/board.h>
#include "chip.h"
#include "arm_arch.h"
#include "arm_internal.h"
#include "lpc31_i2c.h"
#include "lpc31_evntrtr.h"
#include "lpc31_syscreg.h"
#define I2C_TIMEOUT  ((20 * CLK_TCK) / 1000)      /* 20 mS */
#define I2C_STATE_DONE      0
#define I2C_STATE_START     1
#define I2C_STATE_HEADER    2
#define I2C_STATE_TRANSFER  3

static void i2c_setfrequency(struct lpc31_i2cdev_s *priv, uint32_t frequency)
{
  if (frequency != priv->frequency)
    {
      uint32_t freq = lpc31_clkfreq(priv->clkid, DOMAINID_AHB0APB1);

      if (freq > 100000)
        {
          /* asymmetric per 400Khz I2C spec */

          putreg32(((47 * freq) / (83 + 47)) / frequency,
                   priv->base + LPC31_I2C_CLKHI_OFFSET);
          putreg32(((83 * freq) / (83 + 47)) / frequency,
                   priv->base + LPC31_I2C_CLKLO_OFFSET);
        }
      else
        {
          /* 50/50 mark space ratio */

          putreg32(((50 * freq) / 100) / frequency,
                   priv->base + LPC31_I2C_CLKLO_OFFSET);
          putreg32(((50 * freq) / 100) / frequency,
                   priv->base + LPC31_I2C_CLKHI_OFFSET);
        }

      priv->frequency = frequency;
    }
}

static int i2c_interrupt(int irq, FAR void *context, FAR void *arg)
{
  struct lpc31_i2cdev_s *priv = (struct lpc31_i2cdev_s *)arg;

  DEBUGASSERT(priv != NULL);
  i2c_progress(priv);
  return OK;
}

static void i2c_timeout(wdparm_t arg)
{
  struct lpc31_i2cdev_s *priv = (struct lpc31_i2cdev_s *) arg;

  irqstate_t flags = enter_critical_section();

  if (priv->state != I2C_STATE_DONE)
    {
      /* If there's data remaining in the TXFIFO, then ensure at least
       * one transfer has failed to complete.
       */

      if (getreg32(priv->base + LPC31_I2C_TXFL_OFFSET) != 0)
        {
          if (priv->nmsg == 0)
            {
              priv->nmsg++;
            }
        }

      /* Soft reset the USB controller */

      i2c_hwreset(priv);

      /* Mark the transfer as finished */

      priv->state = I2C_STATE_DONE;
      nxsem_post(&priv->wait);
    }

  leave_critical_section(flags);
}

static int i2c_transfer(FAR struct i2c_master_s *dev,
                        FAR struct i2c_msg_s *msgs, int count)
{
  struct lpc31_i2cdev_s *priv = (struct lpc31_i2cdev_s *) dev;
  irqstate_t flags;
  int ret;

  /* Get exclusive access to the I2C bus */

  nxsem_wait(&priv->mutex);
  flags = enter_critical_section();

  /* Set up for the transfer */

  priv->state = I2C_STATE_START;
  priv->msgs  = msgs;
  priv->nmsg  = count;

  /* Configure the I2C frequency.
   * REVISIT: Note that the frequency is set only on the first message.
   * This could be extended to support different transfer frequencies for
   * each message segment.
   */

  i2c_setfrequency(priv, msgs->frequency);

  /* Start the transfer */

  i2c_progress(priv);

  /* Start a watchdog to timeout the transfer if the bus is locked up... */

  wd_start(&priv->timeout, I2C_TIMEOUT, i2c_timeout, (wdparm_t)priv);

  /* Wait for the transfer to complete */

  while (priv->state != I2C_STATE_DONE)
    {
      nxsem_wait(&priv->wait);
    }

  wd_cancel(&priv->timeout);
  ret = count - priv->nmsg;

  leave_critical_section(flags);
  nxsem_post(&priv->mutex);
  return ret;
}

struct i2c_master_s *lpc31_i2cbus_initialize(int port)
{
  struct lpc31_i2cdev_s *priv = &i2cdevices[port];

  priv->base  = (port == 0) ? LPC31_I2C0_VBASE : LPC31_I2C1_VBASE;
  priv->clkid = (port == 0) ? CLKID_I2C0PCLK   : CLKID_I2C1PCLK;
  priv->rstid = (port == 0) ? RESETID_I2C0RST  : RESETID_I2C1RST;
  priv->irqid = (port == 0) ? LPC31_IRQ_I2C0   : LPC31_IRQ_I2C1;

  /* Initialize semaphores */

  nxsem_init(&priv->mutex, 0, 1);
  nxsem_init(&priv->wait, 0, 0);

  /* The wait semaphore is used for signaling and, hence, should not have
   * priority inheritance enabled.
   */

  nxsem_set_protocol(&priv->wait, SEM_PRIO_NONE);

  /* Enable I2C system clocks */

  lpc31_enableclock(priv->clkid);

  /* Reset I2C blocks */

  lpc31_softreset(priv->rstid);

  /* Soft reset the device */

  i2c_hwreset(priv);

  /* Attach Interrupt Handler */

  irq_attach(priv->irqid, i2c_interrupt, priv);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->irqid);

  /* Install our operations */

  priv->dev.ops = &lpc31_i2c_ops;
  return &priv->dev;
}

int lpc31_i2cbus_uninitialize(FAR struct i2c_master_s *dev)
{
  struct lpc31_i2cdev_s *priv = (struct lpc31_i2cdev_s *)dev;

  /* Disable All Interrupts, soft reset the device */

  i2c_hwreset(priv);

  /* Detach Interrupt Handler */

  irq_detach(priv->irqid);

  /* Reset I2C blocks */

  lpc31_softreset(priv->rstid);

  /* Disable I2C system clocks */

  lpc31_disableclock(priv->clkid);
  return OK;
}
